--- a/src/Server/package.json
+++ b/src/Server/package.json
@@ -15,7 +15,9 @@
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "moment": "^2.29.4",
         "mongoose": "^7.5.0",
+        "node-schedule": "^2.1.1",
         "nodemon": "^3.0.1"
     }
 }
